# goide

./: .env.example  .gitignore  LICENSE  README.md  full_diff.patch  index.html  original_editorshell.txt  original_editorshell_utf8.txt  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
_bmad-output/: code-review.diff  current_review.diff  project-context.md
_bmad-output/brainstorming/: brainstorming-session-2026-04-07-143837.md
_bmad-output/implementation-artifacts/: 1-1-set-up-project-from-starter-template.md  1-2-initialize-app-shell-workspace-open.md  1-3-source-tree-file-open.md  1-4-editor-rendering-syntax-highlighting.md  1-5-optional-panels-default-state.md  1-6-status-bar-indicators-command-palette-trigger.md  1-7-write-save.md  1-8-run-baseline.md  2-1-static-concurrency-detection-gopls.md  2-2-hover-hint-underline-predicted.md  2-3-confidence-labels-styling-tokens.md  2-4-density-guard.md  2-5-degraded-runtime-fallback.md  2-6-inline-quick-actions-on-hover.md  (+21 more)
scratch/: inspect_fa.js
scripts/: cargo_check_msvc.cmd  cargo_clippy_msvc.cmd  cargo_test_msvc.cmd  tauri-wrapper.mjs  tauri_build_msvc.cmd
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  patch.ps1  patch_process.ps1  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/analysis/: causal.rs  mod.rs
src-tauri/src/integration/: command.rs  delve.rs  fs.rs  fs_watch.rs  gopls.rs  lsp_manager.rs  mod.rs  new_func.txt  process.rs  shell.rs
src-tauri/src/ui_bridge/: commands.rs  types.rs
(+134 files in other folders)
