[package]
name = "goide"
version = "1.0.2"
description = "A desktop IDE for Go editing, runtime inspection, and concurrency workflows"
authors = ["sung2708"]
license = "MIT"
repository = "https://github.com/sung2708/goide"
homepage = "https://github.com/sung2708/goide"
keywords = ["go", "ide", "tauri", "debugger", "concurrency"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "goide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
